k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    app.kubernetes.io/part-of: supertry
    environment: __ENV__
